Add NavBar (app bar)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "appTitle": "The Intuition",
   "homeHelpTitle": "About Intuition",
+  "goBack": "Go Back",
   "homeHelpSubtitle": "How to train your Sixth Sense?",
   "homeHelp": "help",
   "homeSkill": "skill",
