--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,6 +1,7 @@
 {
   "appTitle": "Интуиция",
   "homeHelpTitle": "Об Интуиции",
+  "goBack": "Назад",
   "homeHelpSubtitle": "Как развить Шестое Чувство?",
   "homeHelp": "помощь",
   "homeSkill": "навык",
