--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,6 +1,7 @@
 {
   "appTitle": "Intuicja",
   "homeHelpTitle": "O Intuicji",
+  "goBack": "Wracać",
   "homeHelpSubtitle": "Jak popravić Szósty Zmysł?",
   "homeHelp": "wsparcie",
   "homeSkill": "umiejętność",
