Exercise Icon Component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
-  "appTitle": "The Intuition",
+  "appTitle": "The Intuition Trainer",
+  "appSubTitle": "App to developing your own Intuition",
   "homeHelpTitle": "About Intuition",
   "goBack": "Go Back",
   "homeHelpSubtitle": "How to train your Sixth Sense?",
