--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,5 +1,6 @@
 {
-  "appTitle": "Intuicja",
+  "appTitle": "Trener intuicji",
+  "appSubTitle": "Aplikacja do rozwijania własnej intuicji",
   "homeHelpTitle": "O Intuicji",
   "goBack": "Wracać",
   "homeHelpSubtitle": "Jak popravić Szósty Zmysł?",
