--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,5 +1,6 @@
 {
-  "appTitle": "Интуиция",
+  "appTitle": "Тренажер Интуиции",
+  "appSubTitle": "Приложение для развития своей Интуиции",
   "homeHelpTitle": "Об Интуиции",
   "goBack": "Назад",
   "homeHelpSubtitle": "Как развить Шестое Чувство?",
