Feature Home page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "appTitle": "The Intuition Trainer",
-  "appSubTitle": "App to developing your own Intuition",
+  "appSubTitle": "Exercises to develop Intuition",
+  "exerciseSubTitle": "The Intuition Training Exercise",
   "homeHelpTitle": "About Intuition",
   "goBack": "Go Back",
   "homeHelpSubtitle": "How to train your Sixth Sense?",
