--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,6 +1,7 @@
 {
   "appTitle": "Trener intuicji",
-  "appSubTitle": "Aplikacja do rozwijania własnej intuicji",
+  "appSubTitle": "Ćwiczenia do rozwijania własnej intuicji",
+  "exerciseSubTitle": "Ćwiczenie treningu intuicji",
   "homeHelpTitle": "O Intuicji",
   "goBack": "Wracać",
   "homeHelpSubtitle": "Jak popravić Szósty Zmysł?",
