--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,6 +1,7 @@
 {
   "appTitle": "Тренажер Интуиции",
-  "appSubTitle": "Приложение для развития своей Интуиции",
+  "appSubTitle": "Упражнения для развития Интуиции",
+  "exerciseSubTitle": "Упражнение для тренировки Интуиции",
   "homeHelpTitle": "Об Интуиции",
   "goBack": "Назад",
   "homeHelpSubtitle": "Как развить Шестое Чувство?",
