Feature. About page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,9 +47,29 @@
   "dialog_import_error": "Error!",
   "dialog_import_error_msg": "Error while copying data",
   "about_article_title": "When logic is powerless...",
-  "about_article_text": "The desire to distinguish between two kinds of perception (intuitive and logical) dates back to antiquity.\n\nIt has been proved in the modern world that developing your intuition is possible and it’s not very difficult!\n\nHow can I hear my inner voice?\n\nStrong self-confidence is the basis for successful training of your Sixth Sense in the first place.",
-  "about_article_text_two": "We made some exercises for intuition development with different levels of complexity.\n\nThe order of their use does not matter, the main thing is to practice on a daily basis.\n\nEach exercise gives you experience points (%) and is displayed on the main application screen.\nThis index is calculated as the average number for seven days of practice (not calendar days).",
-  "about_article_text_three": "How does it work?\nBefore pushing the button on the screen listen to your inner voice (it might be a visual or sound association)\n\nThen - it’s very important – try to remember this feeling or association and push the button.\n\nCompare with your result (correct or incorrect).\n\nThe main purpose of practice is to hear and distinguish the answers of your intuition.\n\nEveryday practice during about 10 minutes will help you dramatically boost the effectiveness of your Gut Feeling.\nIntuition development – is persistence , practice and belief in yourself!\n\nMay the Force of Intuition be with you!",
+  "about_article_text": {
+    "1": "The desire to distinguish between two kinds of perception (intuitive and logical) dates back to antiquity.",
+    "2": "It has been proved in the modern world that developing your intuition is possible and it’s not very difficult!",
+    "3": "How can I hear my inner voice?",
+    "4": "Strong self-confidence is the basis for successful training of your Sixth Sense in the first place.",
+    "5": {
+      "1": "We made some ",
+      "link": "exercises",
+      "2": " for intuition development with different levels of complexity."
+    },
+    "6": "The order of their use does not matter, the main thing is to practice on a daily basis.",
+    "7": "Each exercise gives you experience points (%) and is displayed on the main application screen.",
+    "8": "This index is calculated as the average number for seven days of practice (not calendar days).",
+    "9": "How does it work?",
+    "10": "Before pushing the button on the screen listen to your inner voice (it might be a visual or sound association).",
+    "11": "Then - it’s very important – try to remember this feeling or association and push the button.",
+    "12": "Compare with your result (correct or incorrect).",
+    "13": "The main purpose of practice is to hear and distinguish the answers of your intuition.",
+    "14": "Everyday practice during about 10 minutes will help you dramatically boost the effectiveness of your Gut Feeling.",
+    "15": "Intuition development – is persistence , practice and belief in yourself!",
+    "16": "May the Force of Intuition be with you!",
+    "to_home": "Go to the exercises"
+  },
   "ex_one_of_two_title": "Rely on your Intuition. Choose",
   "one_of_two": " one out of two ",
   "result_page": "Summary",
