--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -47,9 +47,29 @@
   "dialog_import_error": "Błąd!",
   "dialog_import_error_msg": "Wystąpił błąd, podczas kopiowania danych.",
   "about_article_title": "Kiedy logika jest bezsilna...",
-  "about_article_text": "Chęć rozróżnienia między dwoma rodzajami percepcji (intuicyjną i logiczną) sięga starożytności.\n\nUdowodniono we współczesnym świecie, że rozwijanie intuicji jest możliwe i nie jest to bardzo trudne!\n\nJak mogę usłyszeć swój wewnętrzny głos?\n\nSilna pewność siebie jest podstawą pomyślnego treningu Twojego Szóstego Zmysłu.",
-  "about_article_text_two": "Zrobiliśmy kilka ćwiczeń rozwijających intuicję o różnym stopniu złożoności.\n\nKolejność ich stosowania nie ma znaczenia, najważniejsze jest codzienne ćwiczenie.\n\nKażde ćwiczenie daje punkty doświadczenia (%) i jest wyświetlane na głównym ekranie aplikacji.\nWskaźnik ten jest obliczany jako średnia liczba z siedmiu dni praktyki (nie dni kalendarzowych).",
-  "about_article_text_three": "Jak to działa?\nPrzed naciśnięciem przycisku na ekranie wysłuchaj swojego wewnętrznego głosu (może to być skojarzenie wizualne lub dźwiękowe)\n\nNastępnie - to bardzo ważne - spróbuj zapamiętać to uczucie lub skojarzenie i naciśnij przycisk.\n\nPorównaj z wynikiem (poprawnym lub niepoprawnym).\n\nGłównym celem praktyki jest słuchanie i rozróżnianie odpowiedzi wynikających z intuicji.\n\nCodzienna praktyka trwająca około 10 minut pomoże Ci radykalnie zwiększyć skuteczność twojej intuicji.\nRozwój intuicji - to wytrwałość, praktyka i wiara w siebie!\n\nNiech Siła Intuicji będzie z Tobą!",
+  "about_article_text": {
+    "1": "Chęć rozróżnienia między dwoma rodzajami percepcji (intuicyjną i logiczną) sięga starożytności.",
+    "2": "Udowodniono we współczesnym świecie, że rozwijanie intuicji jest możliwe i nie jest to bardzo trudne!",
+    "3": "Jak mogę usłyszeć swój wewnętrzny głos?",
+    "4": "Silna pewność siebie jest podstawą pomyślnego treningu Twojego Szóstego Zmysłu.",
+    "5": {
+      "1": "Zrobiliśmy kilka ",
+      "link": "ćwiczeń",
+      "2": " rozwijających intuicję o różnym stopniu złożoności."
+    },
+    "6": "Kolejność ich stosowania nie ma znaczenia, najważniejsze jest codzienne ćwiczenie.",
+    "7": "Każde ćwiczenie daje punkty doświadczenia (%) i jest wyświetlane na głównym ekranie aplikacji.",
+    "8": "Wskaźnik ten jest obliczany jako średnia liczba z siedmiu dni praktyki (nie dni kalendarzowych).",
+    "9": "Jak to działa?",
+    "10": "Przed naciśnięciem przycisku na ekranie wysłuchaj swojego wewnętrznego głosu (może to być skojarzenie wizualne lub dźwiękowe)",
+    "11": "Następnie - to bardzo ważne - spróbuj zapamiętać to uczucie lub skojarzenie i naciśnij przycisk.",
+    "12": "Porównaj z wynikiem (poprawnym lub niepoprawnym).",
+    "13": "Głównym celem praktyki jest słuchanie i rozróżnianie odpowiedzi wynikających z intuicji.",
+    "14": "Codzienna praktyka trwająca około 10 minut pomoże Ci radykalnie zwiększyć skuteczność twojej intuicji.",
+    "15": "Rozwój intuicji - to wytrwałość, praktyka i wiara w siebie!",
+    "16": "Niech Siła Intuicji będzie z Tobą!",
+    "to_home": "Przejdź do ćwiczeń"
+  },
   "ex_one_of_two_title": "Polegaj na swojej intuicji. Wybierz",
   "one_of_two": " jeden z dwóch ",
   "result_page": "Podsumowanie",
