--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -47,9 +47,29 @@
   "dialog_import_error": "Ошибка!",
   "dialog_import_error_msg": "При попытке скопировать данные.",
   "about_article_title": "Когда логика бессильна...",
-  "about_article_text": "Стремление различать два вида познания (интуитивное и логическое) — появилось еще в античности.\n\nВ современном мире доказали, что тренировать свою интуицию можно и не очень сложно!\n\nКак же все-таки услышать свой Внутренний Голос?\n\nПрежде всего твердая вера в себя и свои силы — основа для успешных тренировок Шестого Чувства.",
-  "about_article_text_two": "Мы подготовили несколько упражнений для развития интуиции, с различными уровнями сложности.\n\nНе имеет значения в каком порядке пользоваться ими, главное - ежедневные тренировки.\n\nПо каждому упражнению накапливается навык (%) и отображается на главном экране приложения.\nЭтот параметр вычисляется, как среднее значение за семь дней тренировок (не календарных дней).",
-  "about_article_text_three": "Как это работает?\nПеред тем, как открыть кнопку на экране — прислушайся к внутреннему голосу (это может быть визуальная или звуковая ассоциация).\n\nДалее, ОЧЕНЬ ВАЖНО — постарайся запомнить это чувство или ассоциацию, а затем открой кнопку.\n\nСравни с получившимся результатом (верно или нет).\n\nОсновная цель во время тренировок — слышать и различать ответы своей интуиции.\n\nЕжедневные упражнения в пределах 10 минут,могут значительно поднять эффективность вашего Внутреннего Голоса.\n\nТренировка интуиции - это настойчивость, практика и Вера в Себя!\n\nДа прибудет с тобой Сила Интуиции!",
+  "about_article_text": {
+    "1": "Стремление различать два вида познания (интуитивное и логическое) — появилось еще в античности.",
+    "2": "В современном мире доказали, что тренировать свою интуицию можно и не очень сложно!",
+    "3": "Как же все-таки услышать свой Внутренний Голос?",
+    "4": "Прежде всего твердая вера в себя и свои силы — основа для успешных тренировок Шестого Чувства.",
+    "5": {
+      "1": "Мы подготовили несколько ",
+      "link": "упражнений",
+      "2": " для развития интуиции, с различными уровнями сложности."
+    },
+    "6": "Не имеет значения в каком порядке пользоваться ими, главное - ежедневные тренировки.",
+    "7": "По каждому упражнению накапливается навык (%) и отображается на главном экране приложения.",
+    "8": "Этот параметр вычисляется, как среднее значение за семь дней тренировок (не календарных дней).",
+    "9": "Как это работает?",
+    "10": "Перед тем, как открыть кнопку на экране — прислушайся к внутреннему голосу (это может быть визуальная или звуковая ассоциация).",
+    "11": "Далее, ОЧЕНЬ ВАЖНО — постарайся запомнить это чувство или ассоциацию, а затем открой кнопку.",
+    "12": "Сравни с получившимся результатом (верно или нет).",
+    "13": "Основная цель во время тренировок — слышать и различать ответы своей интуиции.",
+    "14": "Ежедневные упражнения в пределах 10 минут,могут значительно поднять эффективность вашего Внутреннего Голоса.",
+    "15": "Тренировка интуиции - это настойчивость, практика и Вера в Себя!",
+    "16": "Да прибудет с тобой Сила Интуиции!",
+    "to_home": "Перейти к упражнениям"
+  },
   "ex_one_of_two_title": "Прислушайся к своей Интуиции. Выбери",
   "one_of_two": " одну из двух ",
   "result_page": "Результат",
