--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -35,8 +35,10 @@
   "themeDark": "Темная",
   "themeLight": "Светлая",
   "settingsVibration": "Вибрация",
-  "settingsStatusOn": "Вкл.",
-  "settingsStatusOff": "Выкл.",
+  "mediaStatus": {
+    "on": "Вкл.",
+    "off": "Выкл."
+  },
   "settingsSounds": "Звуки",
   "settingsExercisesSkins": "Тема упражнений",
   "settingsExercisesSelectSkins": "Выберите тему",
@@ -72,7 +74,7 @@
     "14": "Ежедневные упражнения в пределах 10 минут,могут значительно поднять эффективность вашего Внутреннего Голоса.",
     "15": "Тренировка интуиции - это настойчивость, практика и Вера в Себя!",
     "16": "Да прибудет с тобой Сила Интуиции!",
-    "to_home": "Перейти к упражнениям"
+    "to_home": "К упражнениям"
   },
   "ex_one_of_two_title": "Прислушайся к своей Интуиции. Выбери",
   "one_of_two": " одну из двух ",
