--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -26,7 +26,8 @@
   "languageName": {
     "en": "English",
     "pl": "Polski",
-    "ru": "Русский"
+    "ru": "Русский",
+    "ua": "Українська"
   },
   "settingsSelectLanguage": "Wybierz język",
   "settingsSelectedTheme": "Temat",
